bala -interceptor flow with loging /prism js

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,1 +1,34 @@
-<p>demo works!</p>
+
+<h2>What is Angular?</h2>
+<p>
+  Angular is a <strong>platform and framework</strong> for building single-page client applications using HTML and TypeScript.
+  It is developed and maintained by Google. Angular provides a way to structure your web applications with components, 
+  services, routing, and more, allowing developers to build dynamic and responsive web apps efficiently.
+</p>
+
+<pre class="language-html"><code>
+&lt;h1&gt;Hello, {{ '{' }} userName {{ '}' }}&lt;/h1&gt;
+</code></pre>
+
+<pre class="language-html"><code>
+&lt;img [src]="{{ '{' }} imageUrl {{ '}' }}" alt="User Image"&gt;
+</code></pre>
+
+<pre class="language-html"><code>
+&lt;button (click)="onClick()"&gt;Click Me&lt;/button&gt;
+</code></pre>
+
+<pre class="language-html"><code>
+&lt;input [(ngModel)]="{{ '{' }} userName {{ '}' }}" placeholder="Enter your name"&gt;
+</code></pre>
+
+<pre class="language-html"><code>
+&lt;div [class.active]="{{ '{' }} isActive {{ '}' }}"&gt;Active Div&lt;/div&gt;
+</code></pre>
+
+<pre class="language-html"><code>
+&lt;div [style.color]="{{ '{' }} textColor {{ '}' }}"&gt;Colored Text&lt;/div&gt;
+</code></pre>
+
+
+
