--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-info">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">ChangeIdea</a>
+    <a class="navbar-brand" routerLink="/">🙂</a>
     <button
       class="navbar-toggler"
       type="button"
