--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
 <div class="login-page">
   <div class="login-container">
     <h2>Welcome Back</h2>
-    <form (submit)="onLogin();" autocomplete="off">
+    <form (submit)="onLogin();" autocomplete="on">
       <div class="form-group">
         <label for="username">Username</label>
         <input
